Fix the css so that error message is visible and centered now

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -30,7 +30,7 @@ body, html {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -40%);
   width: 100%;
   height: 100%;
   display: flex;
